--- a/src/app/components/registration-form/registration-form.component.html
+++ b/src/app/components/registration-form/registration-form.component.html
@@ -1,15 +1,19 @@
 <div class="d-flex justify-content-center align-items-center vh-50 m-5">
   <div class="card">
     <div class="row g-0">
-      <div class="col-md-5 position-relative">
+      <div class="col-md-4 position-relative">
         <div class="img-div">
           <img
             src="assets/images/register.jpg"
             class="img-fluid rounded"
             alt="Profile"
           />
+          <div class="overlay"></div>
         </div>
-        <blockquote class="blockquote text-center mt-3 position-absolute">
+
+        <blockquote
+          class="blockquote-container text-center mt-3 position-absolute"
+        >
           <p class="mb-0">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry
@@ -25,78 +29,159 @@
           />
         </blockquote>
       </div>
-      <div class="col-md-7 d-flex flex-column px-5">
+      <div
+        class="col-md-8 d-flex flex-column justify-content-around form-container"
+      >
         <div class="text-end mb-2">
           <a href="#" class="text-muted">
-            Having troubles? <span class="text-primary">Get Help</span>
+            Having troubles? <span class="get-help">Get Help</span>
           </a>
         </div>
         <div>
-          <h2 class="mt-3">
-            Start your <span class="text-primary">business</span> now
+          <h2 class="mt-3 heading-container">
+            Start your <span class="word-marker">business</span> now
+            <svg
+              class="curved-underline"
+              width="200"
+              height="30"
+              viewBox="0 0 200 30"
+            >
+              <path
+                d="M 10,15 Q 100,0 190,15"
+                stroke="#00bfa6"
+                stroke-width="2"
+                fill="transparent"
+              />
+            </svg>
           </h2>
           <p class="w-75">
             Creating your company is just a few steps away, Enter your email
             address to continue.
           </p>
-          <form>
+          <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
             <div class="row mb-3">
               <div class="col-md-6">
+                <label>First Name</label>
                 <input
                   type="text"
                   class="form-control"
+                  formControlName="firstName"
                   placeholder="First Name"
                 />
+                <div
+                  *ngIf="registrationForm.get('firstName')?.invalid && registrationForm.get('firstName')?.touched"
+                  class="text-danger"
+                >
+                  First Name is required
+                </div>
               </div>
               <div class="col-md-6">
+                <label>Last Name</label>
                 <input
                   type="text"
                   class="form-control"
+                  formControlName="lastName"
                   placeholder="Last Name"
                 />
+                <div
+                  *ngIf="registrationForm.get('lastName')?.invalid && registrationForm.get('lastName')?.touched"
+                  class="text-danger"
+                >
+                  Last Name is required
+                </div>
               </div>
             </div>
-            <div class="mb-3">
-              <input
-                type="email"
-                class="form-control"
-                placeholder="Email Address"
-              />
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label>Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  formControlName="email"
+                  placeholder="Email Address"
+                />
+                <div
+                  *ngIf="registrationForm.get('email')?.invalid && registrationForm.get('email')?.touched"
+                  class="text-danger"
+                >
+                  Valid Email is required
+                </div>
+              </div>
+              <div class="col-md-6">
+                <label>Phone Number</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="phoneNumber"
+                  placeholder="Phone Number"
+                />
+                <div
+                  *ngIf="registrationForm.get('phoneNumber')?.invalid && registrationForm.get('phoneNumber')?.touched"
+                  class="text-danger"
+                >
+                  Phone Number is required
+                </div>
+              </div>
             </div>
-            <div class="mb-3 input-group">
-              <span class="input-group-text">+966</span>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Phone Number"
-              />
+            <div class="col-md-6">
+              <label>Password</label>
+              <div class="mb-3 input-group">
+                <input
+                  [type]="isPasswordVisible ? 'text' : 'password'"
+                  class="form-control"
+                  formControlName="password"
+                  placeholder="Password"
+                />
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  (click)="togglePasswordVisibility()"
+                >
+                  <i
+                    [ngClass]="isPasswordVisible ? 'bi bi-eye' : 'bi bi-eye-slash'"
+                  ></i>
+                </button>
+              </div>
+              <div
+                *ngIf="registrationForm.get('password')?.invalid && registrationForm.get('password')?.touched"
+                class="text-danger"
+              >
+                Password is required
+              </div>
             </div>
-            <div class="mb-3 input-group">
-              <input
-                type="password"
-                class="form-control"
-                placeholder="Password"
-              />
-              <button class="btn btn-outline-secondary" type="button">
-                <i class="bi bi-eye-slash"></i>
-              </button>
+            <div class="form-check mb-3 d-flex justify-content-between">
+              <div class="col-md-6">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  formControlName="privacyPolicy"
+                  id="privacyPolicy"
+                />
+                <label class="form-check-label" for="privacyPolicy">
+                  Agree to the
+                  <a href="#" class="text-primary">Privacy Policy</a> and
+                  <a href="#" class="text-primary">Terms & Conditions</a>
+                </label>
+                <div
+                  *ngIf="registrationForm.get('privacyPolicy')?.invalid && registrationForm.get('privacyPolicy')?.touched"
+                  class="text-danger"
+                >
+                  You must agree to the Privacy Policy and Terms & Conditions
+                </div>
+              </div>
+              <div class="col-md-4 text-end">
+                <button type="submit" class="btn submit-button px-4">
+                  NEXT <i class="bi bi-arrow-right"></i>
+                </button>
+              </div>
             </div>
-            <div class="form-check mb-3">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                id="privacyPolicy"
-              />
-              <label class="form-check-label" for="privacyPolicy">
-                Agree to the
-                <a href="#" class="text-primary">Privacy Policy</a> and
-                <a href="#" class="text-primary">Terms & Conditions</a>
-              </label>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">NEXT</button>
           </form>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<ng-template #verificationTemplate>
+  <app-verification (closeEvent)="closeVerification()"></app-verification>
+</ng-template>
