--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/styles/variables";
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  line-height: 28px;
+}
+
+a {
+  text-decoration: none;
+}
+
+label {
+  font-size: 12px;
+  color: $label-color;
+}
+input.form-control::placeholder {
+  color: #6c757d; /* Bootstrap's default placeholder color */
+  opacity: 1; /* Ensure full visibility */
+}
